external-crates/move/move-compiler/tests/move_2024/naming/use_fun_no_args.move
module a::m {
    struct Y {}

    public fun no() { abort 0 }

    use fun no as Y.no;
}
